# learning-app

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
learning_app/config/: celery.py  settings.py  urls.py
learning_app/course/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
learning_app/course/migrations/: 0001_initial.py
learning_app/course_task/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
learning_app/course_task/migrations/: 0001_initial.py
learning_app/custom_auth/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tokens.py  urls.py  utils.py  views.py
learning_app/custom_auth/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_remove_user_is_professor_remove_user_is_student_and_more.py  0003_alter_user_role.py  0004_user_email_confirmed_alter_user_is_active.py  0005_alter_user_document_number.py
learning_app/custom_auth/tests/: factories.py  test_user_views.py
learning_app/task_result/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
learning_app/task_result/migrations/: 0001_initial.py
